first commit to do list

--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lingoloop</title>
+    <title>To do list</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="popup.js"></script>
+    <script defer src="content.js"></script>
 </head>
 <body>
- <input id="wordUser" type="text"></input>
+ <input id="task" type="text"></input>
+ <button id="btnValider">Valider</button>
+ <p id="displayTask"></p>
 </body>
 </html>
