--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,8 @@
     <script defer src="content.js"></script>
 </head>
 <body>
- <input id="task" type="text"></input>
- <button id="btnValider">Valider</button>
+    <input type="text" id="task">
+    <button id="btnValider">valider</button>
  <p id="displayTask"></p>
 </body>
 </html>
