--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -8,8 +9,10 @@
     <script defer src="content.js"></script>
 </head>
 <body>
-    <input type="text" id="task">
-    <button id="btnValider">valider</button>
- <p id="displayTask"></p>
+    <div id="card">
+        <div id="header"></div>
+        <input id="userTask" type="text" placeholder="Saisir une tâche"></input>
+        <button id="btnValider">Valider</button>
+    </div>
 </body>
 </html>
