--- a/popup.html
+++ b/popup.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Jersey+10&family=Rammetto+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script defer src="content.js"></script>
 </head>
 <body>
     <div id="card">
-        <div id="header"></div>
+        <div id="header">
+            <div id="date"></div>
+        </div>
         <input id="userTask" type="text" placeholder="Saisir une tâche"></input>
         <button id="btnValider">Valider</button>
+        <div id="containerList"></div>
     </div>
 </body>
 </html>
