darkmode and chekboxing

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,10 @@
     <script defer src="content.js"></script>
 </head>
 <body>
+   
     <div id="card">
         <div id="header">
+            <button id="dark-mode-toggle">dark mode</button>
             <div id="date"></div>
         </div>
         <input id="userTask" type="text" placeholder="Saisir une tâche"></input>
