--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Jersey+10&family=Rammetto+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script defer src="content.js"></script>
@@ -12,6 +13,7 @@
    
     <div id="card">
         <div id="header">
+            <div id="clearContainer"></div>
             <button id="dark-mode-toggle">dark mode</button>
             <div id="date"></div>
         </div>
